--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,22 @@
-body {
-    background-image: url("/images/bluesky.png");
-}
 
-header {
+.header {
     display: flex;
     justify-content: center;
-    width: 100%;
+    background-color: rgb(0, 162, 255);
+    border-radius: 4px;
+    margin-bottom: 4rem;
     
 }
 
 header h1 {
-    color: rgb(235, 220, 15);
+    color: rgb(247, 246, 244);
     padding-top: 2rem;
     padding-left: 2rem;
+}
+
+.btn {
+    margin-top: .5rem;
+    background-color: rgb(0, 162, 255);
+    color: white;
 }
 
