--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,13 @@
 body {
-    background-image: url("../assets/images/pexels-photo-912110.webp");
+    background-image: url("../assets/images/pexels.jpg");
     background-size: 100%;
 }
 
 
 .btn {
     margin-top: .5rem;
-    background-color: rgb(0, 162, 255);
-    color: white;
+    background-color: rgb(184, 198, 206);
+    color: black;
 }
 
 #city-search-term {
@@ -22,6 +22,7 @@ body {
     margin-top: 5rem;
     margin-left: 5rem;
     margin-right: 5rem;
+    font-size: 1.5rem;
 
 }
 
@@ -29,5 +30,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 1.2rem;
+    color: white;
+    margin-left: 5rem;
 }
 
