--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,8 @@
 body {
+    font-family: 'M PLUS 1 Code', sans-serif;
     background-image: url("../assets/images/pexels.jpg");
     background-size: 100%;
+
 }
 
 
@@ -14,15 +16,12 @@ body {
     display: flex;
 }
 
-#weather-container {
-    background-color: white;
-}
 
-.container {
-    margin-top: 5rem;
+.container-search {
     margin-left: 5rem;
     margin-right: 5rem;
     font-size: 1.5rem;
+    margin-top: 5rem;
 
 }
 
@@ -40,8 +39,45 @@ body {
     font-size: 1.2rem;
     color: white;
     margin-left: 5rem;
+    margin-bottom: 5rem;
 }
 
 .weather-now{
     text-align: center;
+    margin-top: 5rem;
+}
+
+.recent {
+    margin-top: 5rem;
+}
+
+.recentButton {
+    color: rgb(238, 221, 71);
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding: .7rem;
+}
+
+.recentButton:hover {
+    color: rgb(238, 221, 71);
+    cursor: pointer;
+    transition: 0.5;
+    text-transform: uppercase;
+    transform: scale(1.2,1.2);
+    font-weight: bold;
+    font-size: 1.7rem;
+  
+    
+}
+
+#fiveDay {
+    color: white;
+   margin-left: 11rem;
+   font-size: 1.3rem;
+   margin-top: 5rem;
+}
+
+#uvSpan {
+    padding: 0.5rem;
+    border-radius: 4px;
 }
